fix darkmode/lightmode switching

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Tauri + Svelte + TS</title>
   </head>
 
-  <body data-theme="rocket" class="dark">
+  <body data-theme="rocket" >
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
